# assessments

./: .gitignore  README.md
dsa_processing/: .gitignore  Makefile  input.txt  main.cpp
si_imperial_converter/: CMakeLists.txt  Makefile
si_imperial_converter/src/: globals.cpp  globals.hpp  lib.cpp  lib.hpp  main.cpp
